--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,23 @@
-main
+body{
+	font-family: Arial;
+}
+input{
+	border-radius: 3px;
+	border: 1px solid #ccc;
+	padding: 7px;
+}
+img{
+	width: 100%;
+	height: 100%;
+}
+.text-center{
+	margin-top: 20px;
+	text-align: center;
+}
+.contenedor-img{
+	box-shadow: 1px 2px 3px grey; 
+	display: inline-block;
+	width: 325px;
+	height: 350px;
+	margin: 0 10px 20px 10px;	
+}
